--- a/pembayaran-step1.html
+++ b/pembayaran-step1.html
@@ -22,8 +22,8 @@
     <body>
         <nav class="navbar navbar-default">
             <div class="container-fluid">
-                <a class="navbar-brand align-items-center">
-                    <div class="navbar-brand ml-5 mb-2" ><img src="assets/logo biru.png" alt=""></div>
+                <a class="navbar-brand align-items-center text-sm-left text-center">
+                    <div class="navbar-brand ml-0 ml-sm-5 mb-2" ><img src="assets/logo biru.png" alt=""></div>
                 </a>
             </div>
         </nav>
