--- a/pembayaran-step1.html
+++ b/pembayaran-step1.html
@@ -21,8 +21,8 @@
     </head>
     <body>
         <nav class="navbar navbar-default">
-            <div class="container-fluid">
-                <a class="navbar-brand align-items-center text-sm-left text-center">
+            <div class="container-fluid d-flex justify-content-center justify-content-sm-start">
+                <a class="navbar-brand align-items-center">
                     <div class="navbar-brand ml-0 ml-sm-5 mb-2" ><img src="assets/logo biru.png" alt=""></div>
                 </a>
             </div>
@@ -108,7 +108,7 @@
                                     </div>
                                 </div>
                             </div>
-                            <div class="text-center mt-3 mb-3">
+                            <div class="text-center mt-3 mb-5">
                                 <a class="tombol btn" href="pembayaran-step2.html">Lanjutkan Pembayaran</a>
                             </div>
                         </div>
