--- a/pembayaran-step1.html
+++ b/pembayaran-step1.html
@@ -20,7 +20,7 @@
     </head>
     <body>
         <nav class="navbar navbar-default">
-            <div class="container-fluid">
+            <div class="container-fluid d-flex justify-content-center justify-content-sm-start">
                 <a class="navbar-brand align-items-center">
                     <div class="navbar-brand ml-0 ml-sm-5 mb-2" ><img src="assets/logo biru.png" alt=""></div>
                 </a>
