--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
             </div>
         </nav>
         <div class="container mt-5">
-                <div class="p-5" style="text-align:center;">
-                    <img class="mt-5 pt-5"src="./assets/joystick.svg" width>
-                    <h3 class="my-5" style="line-height: 42px;" >Persiapan Kuliah Serasa Gaming?<br>Gamifythink Menyediakannya Untukmu.</h3>
-                    <a class="btn-lg btn-primary mt-5" href="">Mulai TO</a>
+                <div class="p-3" style="text-align:center;">
+                    <img class="mt-5 pt-5 joystick-img"src="./assets/joystick.svg" width>
+                    <h3 class="my-5 joystick-title" style="line-height: 42px;" >Persiapan Kuliah Serasa Gaming? <br>Gamifythink Menyediakannya Untukmu.</h3>
+                    <a class="joystick-button btn-lg btn-primary mt-5" href="">Mulai TO</a>
                 </div>
         </div>
     </div>
@@ -80,7 +80,7 @@
         </div>
     </div>
     <div class="my-5" style="background-color: #1C4F94;">
-        <div class="box-atas d-md-none "></div>
+        <div class="box-atas "></div>
         <div style="background-color: #F5F3EF;">
             <div class="ml-5 px-5 pt-5 box-tengah">
                 <div>
@@ -306,13 +306,13 @@
                     </div>
                 </div>
             </div>
-            <button class="btn btn-lg btn-primary col-6 d-block d-md-none mx-auto mt-4">Load More</button>
+            <button class="btn btn-lg  col-6 d-block d-md-none mx-auto mt-4 btn-more">Lihat Lebih Lanjut</button>
         </div>
     </div>
     <footer class="pb-5" style="background-color: #202020;">
         <div class="container">
             <div class="row">
-                <div class="col-4 my-5">
+                <div class="col-7 col-md-6 my-5">
                     <div class="row">
                         <div class="col-6">
                             <h5 class="footer-title">Tentang Kami</h5>
@@ -329,8 +329,8 @@
                         </div>
                     </div>
                 </div>
-                <div class="col-4 ml-auto my-5">
-                    <img class="mx-auto" src="./assets/logo-footer(2).svg" alt="">
+                <div class="col-5 col-md-4 ml-auto my-5">
+                    <img class="mx-auto footer-img" src="./assets/logo-footer(2).svg" alt="">
                     <p class="footer-list mt-3">Temukan kami di </p>
                     <div class="mt-1">
                         <img class="footer-oa mx-2" src="./assets/twitter.svg" alt="">
